# network-control-differential-games

./: .gitignore  CITATION.md  COPYRIGHT_AND_LICENSE.md  LICENSE  README.md  START_HERE.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run_all.py
docs/: EXTENDING.md  NOTATION_TO_CODE.md  PARAMETERS.md  README.md  code_walkthrough_and_model_adaptation_guide.tex  from_model_to_paper.md  lecture_note.tex  network_control_foundations.tex
docs/slides/three_repo_student_onboarding/: README.md  asset_manifest.csv  build_deck.cjs  deck_content.json  speaker_notes.md  three_repo_student_onboarding_deakin.pptx
docs/slides/three_repo_student_onboarding/qa/: deck_static_audit.json  pptx_static_audit.json  validation_summary.md
docs/source/: code_walkthrough_and_model_adaptation_guide.tex  cyberguide.sty  network_control_foundations.tex
examples/: README.md  common_diagnostics.py
examples/foundations/: FIGURE_GUIDE.md  README.md  run_foundation_examples.py
examples/foundations/code/: README.md  model_profiles.py  network_control_examples.py  run_foundation_examples.py  scalability_analysis.py  simple_degree_k_control.py
examples/foundations/results/: README.md
examples/foundations/results/companion_builtin_sf/: baseline_summary.csv  fbs_convergence.csv  parameter_summary.csv
examples/foundations/results/companion_sample_adjacency/: baseline_summary.csv  fbs_convergence.csv  parameter_summary.csv
examples/foundations/results/companion_sample_edges/: baseline_summary.csv  fbs_convergence.csv
examples/foundations/sample_data/: sample_edges.csv
examples/lecture/: FIGURE_GUIDE.md  README.md  run_all_lecture_examples.py
examples/lecture/code/: README.md  model_profiles.py  network_control_examples.py  run_all_lecture_examples.py  scalability_analysis.py  simple_degree_k_control.py
examples/lecture/results/: README.md  experiment_index.md  figure_explanations.md
examples/lecture/sample_data/: sample_adjacency.csv
examples/reference/: FIGURE_GUIDE.md  MODEL_TAXONOMY.md  README.md  download_reference_repositories.sh  reference_repository_guide.md  requirements.txt  run_reference_smoke.py
examples/reference/patches/: opinion_malware_numpy_networkx_compat.patch
examples/reference/reference_repositories/: README.md
examples/reference/sample_data/: opinion_malware_edges.edges
scripts/: check_latex_style_sync.py
src/cybercontrol/: __init__.py  baseline_diagnostics.py  diagnostics.py  heterogeneity.py  io.py  models.py  network_models.py  numerics.py  plotting.py  torch_utils.py
tests/: test_cybercontrol_shared.py  test_scalability_sparse_fbs.py
(+130 files in other folders)
