[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cybercontrol"
version = "0.1.0"
description = "Teaching utilities for network optimal control, differential games, hybrid control, and cyber-control examples."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "See LICENSE and COPYRIGHT_AND_LICENSE.md"}
authors = [{name = "Luxing Yang"}]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "networkx",
]

[project.optional-dependencies]
graph = ["python-igraph"]
reference = ["python-igraph"]
torch = ["torch"]
dev = ["pytest", "ruff"]
all = ["python-igraph", "torch", "pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
