[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cybercontrol"
version = "0.1.0"
description = "Teaching utilities for network optimal control, differential games, hybrid control, and cyber-control examples."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "See LICENSE and COPYRIGHT_AND_LICENSE.md"}
authors = [{name = "Luxing Yang"}]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "networkx",
]

[project.optional-dependencies]
graph = ["python-igraph"]
reference = ["python-igraph"]
torch = ["torch"]
dev = ["pytest", "ruff"]
all = ["python-igraph", "torch", "pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts", "examples/foundations/code", "examples/reference/run_reference_smoke.py"]
exclude = ["examples/reference/reference_repositories"]

[tool.ruff.lint]
extend-ignore = [
    "E402",  # examples set cache/backend paths before importing plotting libraries
    "E741",  # compartment notation uses I for infected state
]
